# obs-cli

./: .gitignore  README.md  flake.nix  obs_cli.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: lint.yaml  pypi.yaml  release.yaml
